--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.alpermelkeli</groupId>
-    <artifactId>LaundryCenterBackendMaven</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>LaundryCenterBackend</artifactId>
+    <version>v1.1</version>
 
     <properties>
         <java.version>17</java.version>
@@ -46,6 +46,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-mongodb</artifactId>
             <version>3.1.4</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+            <version>2.7.5</version>
         </dependency>
 
 
