--- a/pom.xml
+++ b/pom.xml
@@ -53,8 +53,19 @@
             <artifactId>spring-boot-starter-aop</artifactId>
             <version>2.7.5</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+            <version>3.1.4</version>
+        </dependency>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.30</version>
+            <scope>provided</scope>
 
+        </dependency>
     </dependencies>
 
     <build>
